--- a/index.html
+++ b/index.html
@@ -1,59 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shubh Raj Singh | Portfolio</title>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       margin: 0;
       font-family: "Segoe UI", sans-serif;
       background-color: #f9f9f9;
       color: #333;
+      padding-top: 3rem;
+      /* Space for fixed navbar */
     }
+
     header {
       background-color: #0d6efd;
       color: white;
       padding: 2rem 1rem;
       text-align: center;
     }
-    header h1 { margin: 0; font-size: 2.5rem; }
-    header p { font-size: 1.1rem; margin-top: 0.5rem; }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      background: #002752;
-      padding: 0.5rem;
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
+
+    header p {
+      font-size: 1.1rem;
+      margin-top: 0.5rem;
+    }
+
+    nav {
+  position: fixed;
+  top: 1.25rem; /* adds space from top */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%; /* shrinks the nav width */
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  background: linear-gradient(90deg, #0052cc, #0069ff);
+  padding: 0.75rem 1.5rem;
+  z-index: 1000;
+  box-shadow: 0 4px 15px rgba(0, 82, 204, 0.3);
+  border-radius: 15px;
+  font-weight: 600;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  user-select: none;
+  transition: background 0.3s ease;
+}
+
+
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: bold;
+      position: relative;
+      padding: 0.25rem 0;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
     }
+
+    nav a::after {
+      content: '';
+      position: absolute;
+      width: 0%;
+      height: 2px;
+      left: 0;
+      bottom: -5px;
+      background-color: #fff;
+      transition: width 0.3s ease;
+      border-radius: 2px;
+    }
+
+    nav a:hover,
+    nav a:focus {
+      color: #e0eaff;
+    }
+
+    nav a:hover::after,
+    nav a:focus::after {
+      width: 100%;
+    }
+
     section {
       padding: 2rem 1rem;
       max-width: 900px;
       margin: auto;
     }
+
     h2 {
       color: #0d6efd;
       border-bottom: 2px solid #0d6efd;
       padding-bottom: 0.3rem;
     }
-    .projects, .skills {
+
+    .projects,
+    .skills {
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
     }
+
     .card {
       background: #fff;
       padding: 1rem;
       border: 1px solid #ddd;
       border-radius: 8px;
       flex: 1 1 250px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
     }
+
     footer {
       background: #002752;
       color: white;
@@ -61,108 +123,134 @@
       padding: 1rem;
       margin-top: 2rem;
     }
+
     @media (max-width: 600px) {
-      header h1 { font-size: 2rem; }
-      nav { flex-direction: column; align-items: center; }
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+      }
     }
   </style>
 </head>
+
 <body>
-    <script>
-  const pic = document.getElementById("profile-pic-wrapper");
-  pic.addEventListener("mousemove", (e) => {
-    const x = e.offsetX - pic.offsetWidth / 2;
-    const y = e.offsetY - pic.offsetHeight / 2;
-    const rotateX = -y / 10;
-    const rotateY = x / 10;
-    pic.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
-  });
-
-  pic.addEventListener("mouseleave", () => {
-    pic.style.transform = "rotateX(0deg) rotateY(0deg)";
-  });
-</script>
-
-    <header>
-  <div style="display: flex; flex-direction: column; align-items: center;">
-    <div style="
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin-bottom: 1rem;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-      transform: rotateY(0deg);
-      transition: transform 0.6s ease;
-      perspective: 1000px;
-    " id="profile-pic-wrapper">
-      <img src="vision.jpg" alt="Profile Photo" style="width: 100%; height: 100%; object-fit: cover;" />
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#achievements">Achievements</a>
+    <a href="#education">Education</a>
+    <a href="#contact">Contact</a>
+  </nav>
+ <header>
+    <div style="display: flex; flex-direction: column; align-items: center;">
+      <div style="
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 1rem;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+        transform: rotateY(0deg);
+        transition: transform 0.6s ease;
+        perspective: 1000px;
+      " id="profile-pic-wrapper">
+        <img src="vision.jpg" alt="Profile Photo" style="width: 100%; height: 100%; object-fit: cover;" />
+      </div>
+      <h1>Shubh Raj Singh</h1>
+      <p>Aspiring Full-Stack Developer | Problem Solver</p>
     </div>
-    <h1>Shubh Raj Singh</h1>
-    <p>Aspiring Full-Stack Developer | Problem Solver | MNC Dreamer</p>
-  </div>
-</header>
+  </header>
 
-<nav>
-  <a href="#about">About</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
-  <a href="#education">Education</a>
-  <a href="#contact">Contact</a>
-</nav>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I am a passionate Computer Science student with a strong interest in algorithms, full-stack development, and
+      building real-world projects.
+      I aim to work at a top product-based MNC where I can grow alongside highly talented minds and a great work
+      culture.
+    </p>
+  </section>
 
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    I am a passionate Computer Science student with a strong interest in algorithms, full-stack development, and building real-world projects.
-    I aim to work at a top product-based MNC where I can grow alongside highly talented minds and a great work culture.
-  </p>
-</section>
-
-<section id="skills">
-  <h2>Skills</h2>
-  <div class="skills">
-    <div class="card">C, C++</div>
-    <div class="card">Java</div>
-    <div class="card">HTML, CSS, JavaScript</div>
-    <div class="card">Git, GitHub</div>
-    <div class="card">Problem Solving (Codeforces Rank 150 in Div.2)</div>
-  </div>
-</section>
-
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="projects">
-    <div class="card">
-      <h3>Grocery Delivery App</h3>
-      <p>Full-stack on-demand grocery delivery system with location-aware features and order tracking.</p>
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <div class="card">C</div>
+      <div class="card">Python</div>
+      <div class="card">Java</div>
+      <div class="card">HTML</div>
+      <div class="card">CSS</div>
+      <div class="card">JavaScript</div>
     </div>
-    <div class="card">
-      <h3>Portfolio Website</h3>
-      <p>This responsive single-file portfolio with HTML/CSS/JS showcasing all relevant details and skills.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Grocery Delivery App</h3>
+        <p>Full-stack on-demand grocery delivery system with location-aware features and order tracking.</p>
+      </div>
+      <div class="card">
+        <h3>Portfolio Website</h3>
+        <p>This responsive single-file portfolio with HTML/CSS/JS showcasing all relevant details and skills.</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="education">
-  <h2>Education</h2>
-  <ul>
-    <li>High School (Class 10): 90% (2018–2019)</li>
-    <li>Secondary Education (Class 12): 83.43% (2020–2021)</li>
-    <li>Current CGPA: 7.55</li>
-  </ul>
-</section>
+  <section id="achievements">
+    <h2>Achievements</h2>
+    <ul>
+      <li>Secured Rank 150 in Codeforces Round 1028 (Div. 2) among 28,741 participants</li>
+      <li>Consistently solved 100+ problems on online judges like Codeforces, LeetCode</li>
+      <li>Completed CS50 by Harvard (Intro to Computer Science)</li>
+      <li>Built and deployed multiple full-stack projects with modern web technologies</li>
+    </ul>
+  </section>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: singh.shubhraj06@gmail.com</p>
-  <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/your-profile</a></p>
-  <p>GitHub: <a href="#" target="_blank">github.com/your-username</a></p>
-</section>
 
-<footer>
-  &copy; 2025 Shubh Raj Singh. All rights reserved.
-</footer>
+  <section id="education">
+    <h2>Education</h2>
+    <ul>
+      <li>High School (Class 10): 90% (2018–2019)</li>
+      <li>Secondary Education (Class 12): 83.43% (2020–2021)</li>
+      <li>Bachelor Of Technology in Computer Science and Engineering - G L Bajaj Group Of Institution, Mathura
+      </li>
+      <li>Current CGPA: 7.55</li>
+    </ul>
+  </section>
 
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:singh.shubhraj06@gmail.com">singh.shubhraj06@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/shubh-raj-singh-687023255/"
+        target="_blank">https://www.linkedin.com/in/shubh-raj-singh-687023255/</a></p>
+    <p>GitHub: <a href="https://github.com/shubhraj-singh" target="_blank">https://github.com/shubhraj-singh</a></p>
+  </section>
+
+  <footer>
+    &copy; 2025 Shubh Raj Singh. All rights reserved.
+  </footer>
+
+  <script>
+    const pic = document.getElementById("profile-pic-wrapper");
+    pic.addEventListener("mousemove", (e) => {
+      const x = e.offsetX - pic.offsetWidth / 2;
+      const y = e.offsetY - pic.offsetHeight / 2;
+      const rotateX = -y / 10;
+      const rotateY = x / 10;
+      pic.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+    });
+
+    pic.addEventListener("mouseleave", () => {
+      pic.style.transform = "rotateX(0deg) rotateY(0deg)";
+    });
+  </script>
 </body>
+
 </html>
