--- a/index.html
+++ b/index.html
@@ -19,71 +19,84 @@
 
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Shubh Raj.</a>
+        <a href="#" class="logo">Shubh Raj. <span class="animate" style="--i:1;"></span></a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
         </nav>
     </header>
 
     <!-- home section design -->
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Shubh Raj Singh</span></h1>
+            <h1>Hi, I'm <span>Shubh Raj Singh</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
+                <span class="animate" style="--i:3;"></span>
             </div>
             <p>AI & ML enthusiast | Engineer</p>
-            <p>Tech enthusiast with a passion for development.</p>
+            <p>Tech enthusiast with a passion for development.
+            <span class="animate" style="--i:4;"></span>
+            </p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Hire ME</a>
                 <a href="#" class="btn">Let's Talk</a>
+                <span class="animate" style="--i:5;"></span>
             </div>
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bx1-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <span class="animate" style="--i:6;"></span>
         </div>
 
         <div class="home-imgHover"></div>
+        <span class="animate home-img" style="--i:7;"></span>
+
     </section>
 
     <!-- about section design -->
 
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span></h2>
+        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="about.jpg" alt="">
             <span class="circle-spin"></span>
+            <span class="animate scroll" style="--i:2;"></span>
         </div>
 
         <div class="about-content">
-            <h3>Frontend Developer!</h3>
-            <p>Highly motivated recent graduate with a bachelor's degree in computer science seeking an entry-level position in software development. Proficient in Java and C. Strong problem-solving and analytical skills, with experience in building projects. Eager to apply technical knowledge to contribute to innovative projects.</p>
+            <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
+            <p>Highly motivated recent graduate with a bachelor's degree in computer science seeking an entry-level position in software development. Proficient in Java and C. Strong problem-solving and analytical skills, with experience in building projects. Eager to apply technical knowledge to contribute to innovative projects.
+                <span class="animate scroll" style="--i:4;"></span>
+            </p>
 
             <div class="btn-box btns">
                 <a href="#" class="btn">Read More</a>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
         </div>
     </section>
 
     <!-- education section design -->
      <section class="education" id="education">
-        <h2 class="heading">My <span>Journey</span></h2>
+        <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="education-row">
             <div class="education-column">
-                <h3 class="title">Education</h3>
+                <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span></h3>
 
                 <div class="education-box">
                     <div class="education-content">
@@ -107,11 +120,12 @@
                             <p>High School (X)</p>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 <!-- 
             <div class="education-column">
-                <h3 class="title">Experience</h3>
+                <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
 
                 <div class="education-box">
                     <div class="education-content">
@@ -135,6 +149,7 @@
                             <p>High School (X)</p>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:6;"></span>
                 </div>
             </div> -->
         </div>
@@ -142,11 +157,11 @@
 
      <!-- skills ssection design -->
       <section class="skills" id="skills">
-        <h2 class="heading">My <span>Skills</span></h2>
+        <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="skills-row">
             <div class="skills-column">
-                <div class="title">Coding Skills</div>
+                <div class="title">Coding Skills<span class="animate scroll" style="--i:2;"></span></div>
 
                 <div class="skills-box">
                     <div class="skills-content">
@@ -170,11 +185,12 @@
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
 
             <!-- <div class="skills-column">
-                <div class="title">Coding Skills</div>
+                <div class="title">Professional Skills<span class="animate scroll" style="--i:5;"></span></div>
 
                 <div class="skills-box">
                     <div class="skills-content">
@@ -198,6 +214,7 @@
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
+                    <span class="animate scroll" style="--i:6;"></span>
                 </div>
             </div> -->
         </div>
@@ -206,7 +223,7 @@
       <!-- Contact section design -->
 
       <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+        <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <form action="#">
             <div class="input-box">
@@ -218,6 +235,7 @@
                     <input type="text" placeholder="Email Address" required>
                     <span class="focus"></span>
                 </div>
+                <span class="animate scroll" style="--i:3;"></span>
             </div>
 
             <div class="input-box">
@@ -229,15 +247,19 @@
                     <input type="text" placeholder="Email Subject" required>
                     <span class="focus"></span>
                 </div>
+                <span class="animate scroll" style="--i:5;"></span>
             </div>
 
             <div class="textarea-field">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
                 <span class="focus"></span>
+                <span class="animate scroll" style="--i:7;"></span>
             </div>
 
             <div class="btn-box btns">
             <button type="submit" class="btn">Submit</button>
+
+            <span class="animate scroll" style="--i:9;"></span>
             </div>
         </form>
       </section>
@@ -246,10 +268,14 @@
       <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2025 by Shubh Raj Singh | All Rights Reserved</p>
+
+            <span class="animate scroll" style="--i:1;"></span>
         </div>
 
         <div class="footer-iconTop">
             <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
+
+            <span class="animate scroll" style="--i:1;"></span>
         </div>
       </footer>
 
