--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
                 <span class="animate" style="--i:3;"></span>
             </div>
             <p>AI & ML enthusiast | Engineer</p>
+            <div class="btn-box">
+                    <a href="SHUBH_RESUME.pdf" target="_blank" class="btn">Resume</a>
+                </div>
             <p>Tech enthusiast with a passion for development.
-            <span class="animate" style="--i:4;"></span>
+                <span class="animate" style="--i:4;"></span>
             </p>
 
             <div class="btn-box">
                 <a href="#" class="btn">Hire ME</a>
                 <a href="#" class="btn">Let's Talk</a>
-                <span class="animate" style="--i:5;"></span>
             </div>
+            <span class="animate" style="--i:5;"></span>
+        </div>
         </div>
 
         <div class="home-sci">
@@ -79,7 +83,10 @@
 
         <div class="about-content">
             <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Highly motivated recent graduate with a bachelor's degree in computer science seeking an entry-level position in software development. Proficient in Java and C. Strong problem-solving and analytical skills, with experience in building projects. Eager to apply technical knowledge to contribute to innovative projects.
+            <p>Highly motivated recent graduate with a bachelor's degree in computer science seeking an entry-level
+                position in software development. Proficient in Java and C. Strong problem-solving and analytical
+                skills, with experience in building projects. Eager to apply technical knowledge to contribute to
+                innovative projects.
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
 
@@ -91,7 +98,7 @@
     </section>
 
     <!-- education section design -->
-     <section class="education" id="education">
+    <section class="education" id="education">
         <h2 class="heading">My <span>Journey</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="education-row">
@@ -108,14 +115,16 @@
                     </div>
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2020 - 2021 | <em>Percentage: 83.43%</em></div>
+                            <div class="year"><i class='bx bxs-calendar'></i>2020 - 2021 | <em>Percentage: 83.43%</em>
+                            </div>
                             <h3>Central Board of Secondary Education</h3>
                             <p>Intermediate School (XII) </p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2018 - 2019 | <em>Percentage: 90%</em></div>
+                            <div class="year"><i class='bx bxs-calendar'></i>2018 - 2019 | <em>Percentage: 90%</em>
+                            </div>
                             <h3>Central Board of Secondary Education</h3>
                             <p>High School (X)</p>
                         </div>
@@ -123,7 +132,7 @@
                     <span class="animate scroll" style="--i:3;"></span>
                 </div>
             </div>
-<!-- 
+            <!-- 
             <div class="education-column">
                 <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
 
@@ -153,10 +162,10 @@
                 </div>
             </div> -->
         </div>
-     </section>
+    </section>
 
-     <!-- skills ssection design -->
-      <section class="skills" id="skills">
+    <!-- skills ssection design -->
+    <section class="skills" id="skills">
         <h2 class="heading">My <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="skills-row">
@@ -169,7 +178,7 @@
                             <h3>HTML <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
-                        
+
                         <div class="progress">
                             <h3>CSS <span>90%</span></h3>
                             <div class="bar"><span></span></div>
@@ -218,11 +227,11 @@
                 </div>
             </div> -->
         </div>
-      </section>
+    </section>
 
-      <!-- Contact section design -->
+    <!-- Contact section design -->
 
-      <section class="contact" id="contact">
+    <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <form action="#">
@@ -257,15 +266,15 @@
             </div>
 
             <div class="btn-box btns">
-            <button type="submit" class="btn">Submit</button>
+                <button type="submit" class="btn">Submit</button>
 
-            <span class="animate scroll" style="--i:9;"></span>
+                <span class="animate scroll" style="--i:9;"></span>
             </div>
         </form>
-      </section>
+    </section>
 
-      <!-- footer design -->
-      <footer class="footer">
+    <!-- footer design -->
+    <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2025 by Shubh Raj Singh | All Rights Reserved</p>
 
@@ -277,7 +286,7 @@
 
             <span class="animate scroll" style="--i:1;"></span>
         </div>
-      </footer>
+    </footer>
 
     <script src="script.js"></script>
 </body>
